Make the tensor

--- a/Molecular_VAE.ipynb
+++ b/Molecular_VAE.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Molecular-VAE-final",
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python2",
-      "display_name": "Python 2"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aksub99/molecular-vae/blob/master/Molecular_VAE.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -26,11 +12,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "oZ7Cl9tzTCl-",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "oZ7Cl9tzTCl-"
       },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -47,20 +35,20 @@
         "import torch.optim as optim\n",
         "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
         "from sklearn import model_selection"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "7aXdqRqQTLEX",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "7aXdqRqQTLEX"
       },
+      "outputs": [],
       "source": [
         "def one_hot_array(i, n):\n",
-        "    return map(int, [ix == i for ix in xrange(n)])\n",
+        "    return map(int, [ix == i for ix in range(n)])\n",
         "\n",
         "def one_hot_index(vec, charset):\n",
         "    return map(charset.index, vec)\n",
@@ -87,17 +75,17 @@
         "        return (data_train, data_test, charset)\n",
         "    else:\n",
         "        return (data_test, charset)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "HGAirp3UUDmt",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "HGAirp3UUDmt"
       },
+      "outputs": [],
       "source": [
         "class MolecularVAE(nn.Module):\n",
         "    def __init__(self):\n",
@@ -142,32 +130,23 @@
         "        z_mean, z_logvar = self.encode(x)\n",
         "        z = self.sampling(z_mean, z_logvar)\n",
         "        return self.decode(z), z_mean, z_logvar"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "psCpULS_AQMg",
-        "colab_type": "code",
-        "outputId": "277f9955-2151-4538-d057-36004bad8b6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
-        }
+        },
+        "colab_type": "code",
+        "id": "psCpULS_AQMg",
+        "outputId": "277f9955-2151-4538-d057-36004bad8b6e"
       },
-      "source": [
-        "!rm -R 'molecular-vae'\n",
-        "!git clone https://github.com/aksub99/molecular-vae.git\n",
-        "import zipfile\n",
-        "zip_ref = zipfile.ZipFile('molecular-vae/data/processed.zip', 'r')\n",
-        "zip_ref.extractall('molecular-vae/data/')\n",
-        "zip_ref.close()\n"
-      ],
-      "execution_count": 4,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "rm: cannot remove 'molecular-vae': No such file or directory\n",
@@ -178,75 +157,33 @@
             "remote: Total 159 (delta 18), reused 29 (delta 12), pack-reused 110\u001b[K\n",
             "Receiving objects: 100% (159/159), 2.91 MiB | 5.06 MiB/s, done.\n",
             "Resolving deltas: 100% (78/78), done.\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "!rm -R 'molecular-vae'\n",
+        "!git clone https://github.com/aksub99/molecular-vae.git\n",
+        "import zipfile\n",
+        "zip_ref = zipfile.ZipFile('molecular-vae/data/processed.zip', 'r')\n",
+        "zip_ref.extractall('molecular-vae/data/')\n",
+        "zip_ref.close()\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "5r0gV2l-AtAS",
-        "colab_type": "code",
-        "outputId": "cc362b8d-7133-4832-b714-902884242e6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "colab_type": "code",
+        "id": "5r0gV2l-AtAS",
+        "outputId": "cc362b8d-7133-4832-b714-902884242e6e"
       },
-      "source": [
-        "def vae_loss(x_decoded_mean, x, z_mean, z_logvar):\n",
-        "    xent_loss = F.binary_cross_entropy(x_decoded_mean, x, size_average=False)\n",
-        "    kl_loss = -0.5 * torch.sum(1 + z_logvar - z_mean.pow(2) - z_logvar.exp())\n",
-        "    return xent_loss + kl_loss\n",
-        "\n",
-        "data_train, data_test, charset = load_dataset('molecular-vae/data/processed.h5')\n",
-        "data_train = torch.utils.data.TensorDataset(torch.from_numpy(data_train))\n",
-        "train_loader = torch.utils.data.DataLoader(data_train, batch_size=250, shuffle=True)\n",
-        "\n",
-        "torch.manual_seed(42)\n",
-        "\n",
-        "epochs = 30\n",
-        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-        "\n",
-        "model = MolecularVAE().to(device)\n",
-        "optimizer = optim.Adam(model.parameters())\n",
-        "\n",
-        "def train(epoch):\n",
-        "    model.train()\n",
-        "    train_loss = 0\n",
-        "    for batch_idx, data in enumerate(train_loader):\n",
-        "        data = data[0].to(device)\n",
-        "        optimizer.zero_grad()\n",
-        "        output, mean, logvar = model(data)\n",
-        "        \n",
-        "        if batch_idx==0:\n",
-        "              inp = data.cpu().numpy()\n",
-        "              outp = output.cpu().detach().numpy()\n",
-        "              lab = data.cpu().numpy()\n",
-        "              print(\"Input:\")\n",
-        "              print(decode_smiles_from_indexes(map(from_one_hot_array, inp[0]), charset))\n",
-        "              print(\"Label:\")\n",
-        "              print(decode_smiles_from_indexes(map(from_one_hot_array, lab[0]), charset))\n",
-        "              sampled = outp[0].reshape(1, 120, len(charset)).argmax(axis=2)[0]\n",
-        "              print(\"Output:\")\n",
-        "              print(decode_smiles_from_indexes(sampled, charset))\n",
-        "        \n",
-        "        loss = vae_loss(output, data, mean, logvar)\n",
-        "        loss.backward()\n",
-        "        train_loss += loss\n",
-        "        optimizer.step()\n",
-        "#         if batch_idx % 100 == 0:\n",
-        "#             print(f'{epoch} / {batch_idx}\\t{loss:.4f}')\n",
-        "    print('train', train_loss / len(train_loader.dataset))\n",
-        "    return train_loss / len(train_loader.dataset)\n",
-        "\n",
-        "for epoch in range(1, epochs + 1):\n",
-        "    train_loss = train(epoch)"
-      ],
-      "execution_count": 5,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Input:\n",
@@ -255,18 +192,18 @@
             "COc1ccc(cc1)S(=O)(=O)NCc2ccccc2OC\n",
             "Output:\n",
             "rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
+          "name": "stderr",
           "output_type": "stream",
           "text": [
             "/usr/local/lib/python2.7/dist-packages/torch/nn/_reduction.py:43: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
             "  warnings.warn(warning.format(ret))\n"
-          ],
-          "name": "stderr"
+          ]
         },
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "train tensor(151.2967, device='cuda:0', grad_fn=<DivBackward0>)\n",
@@ -473,23 +410,84 @@
             "Output:\n",
             "Cc1cccccc1)CC(=O)Nc2cccccc2)CCOOO)C\n",
             "train tensor(69.3847, device='cuda:0', grad_fn=<DivBackward0>)\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "def vae_loss(x_decoded_mean, x, z_mean, z_logvar):\n",
+        "    xent_loss = F.binary_cross_entropy(x_decoded_mean, x, size_average=False)\n",
+        "    kl_loss = -0.5 * torch.sum(1 + z_logvar - z_mean.pow(2) - z_logvar.exp())\n",
+        "    return xent_loss + kl_loss\n",
+        "\n",
+        "data_train, data_test, charset = load_dataset('molecular-vae/data/processed.h5')\n",
+        "data_train = torch.utils.data.TensorDataset(torch.from_numpy(data_train))\n",
+        "train_loader = torch.utils.data.DataLoader(data_train, batch_size=250, shuffle=True)\n",
+        "\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "epochs = 30\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "\n",
+        "model = MolecularVAE().to(device)\n",
+        "optimizer = optim.Adam(model.parameters())\n",
+        "\n",
+        "def train(epoch):\n",
+        "    model.train()\n",
+        "    train_loss = 0\n",
+        "    for batch_idx, data in enumerate(train_loader):\n",
+        "        data = data[0].to(device)\n",
+        "        optimizer.zero_grad()\n",
+        "        output, mean, logvar = model(data)\n",
+        "        \n",
+        "        if batch_idx==0:\n",
+        "              inp = data.cpu().numpy()\n",
+        "              outp = output.cpu().detach().numpy()\n",
+        "              lab = data.cpu().numpy()\n",
+        "              print(\"Input:\")\n",
+        "              print(decode_smiles_from_indexes(map(from_one_hot_array, inp[0]), charset))\n",
+        "              print(\"Label:\")\n",
+        "              print(decode_smiles_from_indexes(map(from_one_hot_array, lab[0]), charset))\n",
+        "              sampled = outp[0].reshape(1, 120, len(charset)).argmax(axis=2)[0]\n",
+        "              print(\"Output:\")\n",
+        "              print(decode_smiles_from_indexes(sampled, charset))\n",
+        "        \n",
+        "        loss = vae_loss(output, data, mean, logvar)\n",
+        "        loss.backward()\n",
+        "        train_loss += loss\n",
+        "        optimizer.step()\n",
+        "#         if batch_idx % 100 == 0:\n",
+        "#             print(f'{epoch} / {batch_idx}\\t{loss:.4f}')\n",
+        "    print('train', train_loss / len(train_loader.dataset))\n",
+        "    return train_loss / len(train_loader.dataset)\n",
+        "\n",
+        "for epoch in range(1, epochs + 1):\n",
+        "    train_loss = train(epoch)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WuPZnm-aYPLu",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "WuPZnm-aYPLu"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "include_colab_link": true,
+      "name": "Molecular-VAE-final",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 2",
+      "name": "python2"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
